--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,18 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#161B22" />
     <meta
-      name="Personal Portfolio"
+      name="ជោគជតារាសី"
       content="Web site created using create-react-app"
     />
        <!-- For Facebook -->
-    <meta property="og:title" content="ខ្លាឃ្លោក" />
+    <meta property="og:title" content="ជោគជតារាសី" />
     <meta property="og:type" content="App" />
     <meta property="og:image" content="%PUBLIC_URL%/profile.png" />
     <meta property="og:url" content="%PUBLIC_URL%/profile.png" />
-    <meta property="og:description" content="ដោយចង់រំលឹកអនុស្សាវរីយ៍ពីក្មេងដែលបានលេងខ្លាឃ្លោកតាមវត្ត ដូច្នេះខ្ញុំក៏បង្កើតវាឡើងក្នុងគោលបំណងដើម្បីកំសាន្ត​និងពង្រីកចំណេះដឹងសរសេរកូដបន្ថែម" />
+    <meta property="og:description" content="តើលោកអ្នកមានជោគជតារាសីយ៉ាងណាដែរ?" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/profile.png" />
     <link rel="manifest" href="../src/assets/profile.png" />
-    <title>Khmer Horoscope</title>
+    <title>ជោគជតារាសី</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
