--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,14 @@
       content="Web site created using create-react-app"
     />
        <!-- For Facebook -->
-    <meta property="og:title" content="ជោគជតារាសី" />
+    <meta property="og:title" content="ទស្សន៍ទាយ" />
     <meta property="og:type" content="App" />
     <meta property="og:image" content="%PUBLIC_URL%/profile.png" />
     <meta property="og:url" content="%PUBLIC_URL%/profile.png" />
-    <meta property="og:description" content="តើលោកអ្នកមានជោគជតារាសីយ៉ាងណាដែរ?" />
+    <meta property="og:description" content="កម្មវីធីេនះប្រើសំរាប់ទស្សន៍ទាយពីជោគជតារាសីឆ្នាំទាំង១២និងទស្សន៍ទាយជីវិតគូររបស់លោកអ្នក" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/profile.png" />
     <link rel="manifest" href="../src/assets/profile.png" />
-    <title>ជោគជតារាសី</title>
+    <title>ទស្សន៍ទាយ</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
