Changed profile img

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/assets/profile.png" />
+    <link rel="icon" href="../src/assets/profile.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#161B22" />
@@ -13,11 +13,11 @@
        <!-- For Facebook -->
     <meta property="og:title" content="ទស្សន៍ទាយ" />
     <meta property="og:type" content="App" />
-    <meta property="og:image" content="%PUBLIC_URL%/profile.png" />
-    <meta property="og:url" content="%PUBLIC_URL%/profile.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/profile.jpg" />
+    <meta property="og:url" content="%PUBLIC_URL%/profile.jpg" />
     <meta property="og:description" content="កម្មវីធីេនះប្រើសំរាប់ទស្សន៍ទាយពីជោគជតារាសីឆ្នាំទាំង១២និងទស្សន៍ទាយជីវិតគូររបស់លោកអ្នក" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/profile.png" />
-    <link rel="manifest" href="../src/assets/profile.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/profile.jpg" />
+    <link rel="manifest" href="../src/assets/profile.jpg" />
     <title>ទស្សន៍ទាយ</title>
   </head>
   <body>
